# SLAMTEC-Athena-RESTful-API-Python-Wrapper

./: .gitignore  404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: black.yml  deploy-doc.yml  disabled_workflow  ruff.yml  workflow.yml
API_Docs/: index.html
RoboComms_Docs/: index.html
Utils_Docs/: index.html
VPN Setup Docker Guide/: index.html
docs/: API Docs.md  API_Docs.md  README.md  RoboComms_Docs.md  Utils_Docs.md  VPN Setup Docker Guide EN.md  VPN Setup Docker Guide.md
robotComms/: __init__.py  robotComms.py
robotComms/api_classes/: __init__.py  artifact.py  motion.py  platform.py  slam.py  statistics.py  system.py
robotComms/utils/: __init__.py  connection.py  logger.py  models.py  rest_adapter.py  results.py
src/robotComms/: logger.py  rest_adapter.py  robotComms.py
src/robotComms/utils/: exceptions.py  logger.py  rest_adapter.py
