[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "robotComms"
version = "0.1"
description = "Python Adapter Library with an abstraction layer to communicate with SLAMTEC Athena Robot over RESTful API"
authors = [{name = "Parth Patel", email = "parth.pmech@gmail.com"}]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "annotated-types==0.7.0",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "pytest==8.3.3",
    "python-dateutil==2.9.0.post0",
    "typing_extensions==4.12.2",
]

[project.urls]
"Homepage" = "https://github.com/parth-20-07/SLAMTEC-Athena-RESTful-API-Python-Wrapper.git"

[project.optional-dependencies]
dev = [
    "black",
    "jedi",
    "ruff"
]

#[tool.setuptools]
#packages = ["src/robotComms/utils"]

###############################################
# Dev Tools Dependecies Setup
###############################################

## Linter

[tool.ruff]
target-version = "py38"
src = ["src"]  # for ruff isort
extend-exclude = [
  "pyproject.toml",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

## Formatter

[tool.black] 
line-length = 100 
skip-magic-trailing-comma = false
skip-string-normalization = false
target-version = ['py39', 'py310', 'py311', 'py312']
