[tool.poetry]
name = "robotcomms"
version = "0.1.0"
description = "Python Adapter Library with an abstraction layer to communicate with SLAMTEC Athena Robot over RESTful API"
authors = ["Parth Patel <parth.pmech@gmail.com>"]
readme = "README.md"
package-mode = false # TODO: Turn this to true when the development is complete

[tool.poetry.dependencies]
python = "^3.12"
typing_extensions = "^4.12.2"
pytest = "^8.3.3"
dateutils = "^0.6.12"
requests = "^2.32.3"
black = "^24.10.0"
ruff = "^0.7.0"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.urls]
"Homepage" = "https://github.com/parth-20-07/SLAMTEC-Athena-RESTful-API-Python-Wrapper.git"

###############################################
# Dev Tools Dependecies Setup
###############################################

## Linter

[tool.ruff]
target-version = "py38"
src = ["src"]  # for ruff isort
extend-exclude = [
  "pyproject.toml",
]
lint.select = ["E4", "E7", "E9", "F", "B", "Q"]
lint.ignore = ["E501"]
lint.unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"


## Formatter

[tool.black] 
line-length = 100 
skip-magic-trailing-comma = false
skip-string-normalization = false
target-version = ['py39', 'py310', 'py311', 'py312']

